--- a/doc/快速开始.md
+++ b/doc/快速开始.md
@@ -89,7 +89,7 @@ docker exec easy-mcp-mysql mysqldump -u easy_mcp -peasy_mcp_password easy_mcp > 
 ## 🔐 默认账户
 
 - **用户名**: admin
-- **密码**: admin123
+- **密码**: admin
 - **邮箱**: admin@example.com
 
 > ⚠️ **生产环境请务必修改默认密码！**
